--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,27 @@ body {
 
 button {
 	background-color: #2e3d49;
+	outline: none;
 	color: #fff;
 	font-size: 1.5em;
+	border: none;
 	border-radius: 12%;
+	box-shadow: 0px 5px 0 #191b19;
+}
+
+button:active {
+
+  box-shadow: 0 0 0.5px;
+  transform: translateY(4px);
+}
+
+.key {
+	transition: all .07s ease;
+}
+
+ .key-press {
+	 box-shadow: 0 0 0.5px;
+  transform: translateY(4px);
 }
 
 .header {
@@ -40,8 +58,8 @@ button {
 	height: 400px;
 	grid-template-columns: 25% 25% 25% 25%;
 	grid-template-rows: 20% 20% 20% 20% 20%;
-	grid-row-gap: 3px;
-	grid-column-gap: 3px;
+	grid-row-gap: 7px;
+	grid-column-gap: 5px;
 }
 
 
