--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,8 @@
 body {
-	background-color: #F6E8F5;
+	background-color: linen;
 }
 
  
-
 button {
 	background-color: #2e3d49;
 	outline: none;
@@ -12,6 +11,15 @@ button {
 	border: none;
 	border-radius: 12%;
 	box-shadow: 0px 5px 0 #191b19;
+}
+
+a {
+	text-decoration: none;
+	color: sienna;
+}
+
+a:hover {
+	color: chocolate;
 }
 
 button:active {
@@ -30,13 +38,16 @@ button:active {
 }
 
 .header {
-	background-color: #F8F3CB;
-	height: 150px;
-	margin: 0;
+	background-color: tan;
+	height: 100px;
+	margin: 0 20% 0 20%;
 	text-align: center;
 	color: #1E1D19;
 	font-size: 1.5em;
-	padding-top: 20px;
+	border: 1px solid black;
+	border-radius: 5px;
+	font-family: Arial, Helvetica, sans-serif;
+
 }
 
 #calculator {
@@ -46,15 +57,13 @@ button:active {
 	height: 550px;
 	margin: 0 auto;
 	margin-top: 20px;
-	background-color: 	#D0D9E2;
+	background-color: silver;
 }
-
-
 
 #button-group {
 	margin: 0 auto;
 	display: grid;
-	width: 250px;
+	width: 275px;
 	height: 400px;
 	grid-template-columns: 25% 25% 25% 25%;
 	grid-template-rows: 20% 20% 20% 20% 20%;
@@ -66,10 +75,6 @@ button:active {
 
 .equals-button {
 	grid-column: span 2;
-}
-
-.zero-button {
-
 }
 
 .screen {
@@ -90,4 +95,9 @@ button:active {
 
 .clear-button {
 	background-color: #DE9C19;
+}
+
+.footer {
+	width: 400px;
+	margin: 0 auto;
 }
